--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/my_database?schema=public"
+DATABASE_URL= postgresql://postgres:postgres@localhost:5432/backend
