--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-# diesel = "2.0.4"
 dotenv = "0.15.0"
 postgres = { version = "0.19.5", optional = true }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.28.1", features = ["full"] }
 diesel = { version = "2.0.4", features = ["postgres"] }
+dotenvy = "0.15"
