--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
-name = "Actix-web"
+name = "Actix_web"
 version = "0.1.0"
+authors = ["sasasnzare75@gmail.com"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix-web = "4.3.1"
-prisma = "0.1.1"
+# diesel = "2.0.4"
+dotenv = "0.15.0"
+postgres = { version = "0.19.5", optional = true }
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.68"
+tokio = { version = "1.28.1", features = ["full"] }
+diesel = { version = "2.0.4", features = ["postgres"] }
